# neofoodclub.rs

./: .gitignore  .justfile  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: CI.yml  codspeed.yml  coverage.yml  fuzz.yml  python-wheels.yml  test.yml  update-logit-values.yml
automation/: README.md  fetch_previous.py  final.py  preprocessing.py  pyproject.toml
automation/output/: history.csv
automation/raw_json/: 9795.json  9796.json  9797.json  9798.json  9799.json  9800.json  9801.json  9802.json  9803.json  9804.json  9805.json  9806.json  9807.json  9808.json  9809.json  9810.json  9811.json  9812.json  9813.json  9814.json  9815.json  9816.json  9817.json  9818.json  9819.json  9820.json  9821.json  9822.json  9823.json  9824.json  9825.json  9826.json  9827.json  9828.json  9829.json  9830.json  9831.json  9832.json  9833.json  9834.json  (+82 more)
benches/: math_benches.rs
crates/core/: Cargo.toml
crates/core/examples/: all_bets_table.rs
crates/core/src/: arena.rs  bets.rs  bets_factory.rs  lib.rs  nfc.rs  pirates.rs  round_data.rs
crates/core/src/models/: mod.rs  multinomial_logit.rs
crates/core/tests/: integration_test.rs
crates/python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
crates/python/python/neofoodclub/: neofoodclub.pyi
crates/python/src/: arena.rs  bets.rs  math.rs  modifier.rs  nfc.rs
crates/python/tests/: conftest.py  test_neofoodclub.py
crates/wasm/: Cargo.toml
crates/wasm/src/: engine.rs  hash.rs  lib.rs
crates/wasm/tests/: web.rs
examples/: all_bets_table.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_amounts_hash.rs  fuzz_bets_hash.rs
src/: arena.rs  bets.rs  chance.rs  error.rs  food_adjustments.rs  lib.rs  math.rs  modifier.rs  nfc.rs  odds.rs  oddschange.rs  round_data.rs  utils.rs
src/models/: original.rs
tests/: integration_test.rs  payout_table_test.rs  validation.rs
