[package]
name = "neofoodclub"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
itertools = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
bitflags = "2.11.0"
serde_qs = "1.0.0"
chrono = "0.4.43"
chrono-tz = "0.10.4"
comfy-table = "7.2.2"

[lib]
name = "neofoodclub"

[[example]]
name = "all_bets_table"
path = "examples/all_bets_table.rs"

[[bench]]
name = "math_benches"
harness = false

[dev-dependencies]
divan = { version = "5.0.0", package = "codspeed-divan-compat" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
