[package]
name = "neofoodclub-python"
version = "1.0.19"
edition = "2024"

[lib]
name = "neofoodclub"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311", "chrono", "chrono-tz"] }
neofoodclub = { path = "../core" }
chrono = "0.4.38"
chrono-tz = "0.10.0"

[features]
# Feature for Windows ARM64 cross-compilation
windows-cross = ["pyo3/generate-import-lib"]
